upgraded sourcecode for smartBrati and NNDose. Now Code is more java8 style faster and should handle the concat of String better.